--- a/config
+++ b/config
@@ -79,7 +79,7 @@ set $w2 "2: FireFox "
 set $w3 "3: Files "
 set $w4 "4: Editor "
 set $w5 "5: Spotify "
-
+#lolol
 
 # switch to workspace
 bindsym $mod+1 workspace $w1
@@ -133,7 +133,7 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
+bar {Filip
     status_command i3blocks -c ~/.config/i3/i3blocks.conf
     font pango:FontAwesome 8, System San Francisco Display 9
     colors {
